--- a/about.html
+++ b/about.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Blake | Blake’s Outdoor Adventures</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" alt="Blake’s Outdoor Adventures Logo" width="50">
+        Blake’s Outdoor Adventures
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="adventures.html">Adventures</a></li>
+          <li class="nav-item"><a class="nav-link" href="gear.html">Gear Tips</a></li>
+          <li class="nav-item"><a class="nav-link" href="photography.html">Photography</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
+  <main class="container mt-4">
+    <div class="text-center mb-5">
+      <h1>About Me</h1>
+      <p>Hi, I’m Blake! I’m passionate about spending time outdoors — whether hiking, camping, or exploring parks with my wife Ally. Nature helps me recharge and enjoy the moment.</p>
+      <p>This site is a space to share my favorite experiences and encourage others to explore the outdoors too.</p>
+    </div>
+  </main>
+
+  <footer class="text-center mt-5 p-3 bg-success text-white">
+    <p>© 2025 Blake’s Outdoor Adventures</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
