--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home | Blake’s Outdoor Adventures</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" alt="Blake’s Outdoor Adventures Logo" width="50" class="d-inline-block align-text-top">
+        Blake’s Outdoor Adventures
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="adventures.html">Adventures</a></li>
+          <li class="nav-item"><a class="nav-link" href="gear.html">Gear Tips</a></li>
+          <li class="nav-item"><a class="nav-link" href="photography.html">Photography</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
+  <main class="container mt-4">
+    <div class="text-center mb-5">
+      <h1>Welcome to My Outdoor World!</h1>
+      <p class="lead">I created this website to share my passion for nature, hiking, camping, and everything outdoors. Whether it’s exploring new trails, trying out gear, or enjoying the beauty of the wilderness — this is where I share it all.</p>
+    </div>
+
+    <div class="row text-center">
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="images/adventures.jpg" class="card-img-top" alt="Adventures">
+          <div class="card-body">
+            <h5 class="card-title">Adventures</h5>
+            <p class="card-text">Discover my latest hiking, camping, and outdoor experiences.</p>
+            <a href="adventures.html" class="btn btn-success">Explore</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="images/gear.jpg" class="card-img-top" alt="Gear Tips">
+          <div class="card-body">
+            <h5 class="card-title">Gear Tips</h5>
+            <p class="card-text">Learn about the best outdoor gear and how to use it effectively.</p>
+            <a href="gear.html" class="btn btn-success">See Gear Tips</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="images/photography.jpg" class="card-img-top" alt="Photography">
+          <div class="card-body">
+            <h5 class="card-title">Photography</h5>
+            <p class="card-text">Enjoy a gallery of my favorite outdoor photos from trails and adventures.</p>
+            <a href="photography.html" class="btn btn-success">View Photos</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="text-center mt-5 p-3 bg-success text-white">
+    <p>© 2025 Blake’s Outdoor Adventures</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
