--- a/adventures.html
+++ b/adventures.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Adventures | Blake’s Outdoor Adventures</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" alt="Blake’s Outdoor Adventures Logo" width="50">
+        Blake’s Outdoor Adventures
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link active" href="adventures.html">Adventures</a></li>
+          <li class="nav-item"><a class="nav-link" href="gear.html">Gear Tips</a></li>
+          <li class="nav-item"><a class="nav-link" href="photography.html">Photography</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
+  <main class="container mt-4">
+    <div class="text-center mb-5">
+      <h1>Recent Adventures</h1>
+      <p>Explore some of my favorite outdoor experiences.</p>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="images/trail1.jpg" class="card-img-top" alt="Red River Gorge">
+          <div class="card-body">
+            <h5 class="card-title">Red River Gorge</h5>
+            <p class="card-text">Spent a weekend hiking and camping with friends — the views were amazing!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="images/trail2.jpg" class="card-img-top" alt="Daniel Boone Forest">
+          <div class="card-body">
+            <h5 class="card-title">Daniel Boone National Forest</h5>
+            <p class="card-text">Explored various trails and enjoyed fishing.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="card h-100">
+          <img src="images/trail3.jpg" class="card-img-top" alt="Mammoth Cave">
+          <div class="card-body">
+            <h5 class="card-title">Mammoth Cave</h5>
+            <p class="card-text">Took a guided tour underground. Truly a unique and unforgettable experience.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="text-center mt-5 p-3 bg-success text-white">
+    <p>© 2025 Blake’s Outdoor Adventures</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
