--- a/photography.html
+++ b/photography.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Photography | Blake’s Outdoor Adventures</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo.png" alt="Blake’s Outdoor Adventures Logo" width="50">
+        Blake’s Outdoor Adventures
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="adventures.html">Adventures</a></li>
+          <li class="nav-item"><a class="nav-link" href="gear.html">Gear Tips</a></li>
+          <li class="nav-item"><a class="nav-link active" href="photography.html">Photography</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
+  <main class="container mt-4">
+    <div class="text-center mb-5">
+      <h1>Outdoor Photography</h1>
+      <p>Explore some of my favorite outdoor moments captured on camera.</p>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 mb-3"><img src="images/photo1.jpg" class="img-fluid rounded" alt="Photo 1"></div>
+      <div class="col-md-4 mb-3"><img src="images/photo2.jpg" class="img-fluid rounded" alt="Photo 2"></div>
+      <div class="col-md-4 mb-3"><img src="images/photo3.jpg" class="img-fluid rounded" alt="Photo 3"></div>
+      <div class="col-md-4 mb-3"><img src="images/photo4.jpg" class="img-fluid rounded" alt="Photo 4"></div>
+      <div class="col-md-4 mb-3"><img src
